# chatwootai

./: .env  .env.example  .env.mcp-odoo.example  .env.redis  .env.test.example  .env.vector-service.example  .gitignore  .windsurfrules  ARCHITECTURE.md  ARQUITETURA_BASICA.md  CORRECAO_AUTENTICACAO_CHATWOOT.md  CORRECOES_SISTEMA_IA.md  Dockerfile.mcp-odoo  Dockerfile.webhook  EFFECTIVE_PROMPTS.md  GUIA_INICIO_RAPIDO.md  GUIA_MIGRACAO_MICROSSERVICOS.md  IMPLEMENTACAO_SERVIDOR_UNIFICADO.md  INICIALIZACOES.MD  MCP.md  METADATA_ANALYTICS.md  MODULO_BUSINESS_RULES_ANALISE.md  ODOO18_DEVELOPMENT_GUIDE.md  ODOO_INTEGRATION_README.md  OPTIMIZATION_GUIDE.md  PLANO_DE_ACAO_01_05.md  PROPOSTA_NOVA_ARQUITETURA.md  PROPOSTA_NOVA_ESTRUTURA_SISTEMA.md  PROPOSTA_NOVA_ESTRUTURA_SISTEMA_REVISADA.md  README.md  README.md.new  README.md.updated  README_AGENTES_MCP.md  README_CORRECOES.md  README_CREW.md  README_DEV5.md  README_DEV6.md  README_DEV7.md  README_DEV8.md  README_NEW_ARCHITECTURE.md  (+156 more)
addons/: README.md
ai-stack-docker/: GUIA_CONEXAO_MCP_CREW.md  GUIA_MONITORAMENTO.md  network.sh
api/: database.py  main.py
backup/: functional_crew.py
backup_20250319_185209/: webhook_server.py
backups/mcp-chatwoot-backup-20250610/: Dockerfile  main.py  pyproject.toml  requirements.txt
backups/mcp-chatwoot-backup-20250610/src/: main.py
backups/mcp-chatwoot-backup-20250610/src/common/: chatwoot.py  config.py  tenant.py
backups/mcp-chatwoot-backup-20250610/src/tools/: contact.py  conversation.py  registry.py
business_rules18/: __manifest__.py
company_services18/: __manifest__.py
(+1639 files in other folders)
