[tool.poetry]
name = "mcp-chatwoot"
version = "0.1.0"
description = "MCP server for Chatwoot integration with multi-tenant support"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
redis = "^5.0.1"
pymongo = "^4.5.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mcp-chatwoot = "main:main"
